Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,48 +4,39 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Acorncom by acorncom</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/acorncom">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1>Acorncom</h1>
+        <p>My profile in a nutshell</p>
 
+
+        <p class="view"><a href="https://github.com/acorncom">View My GitHub Profile</a></p>
+
+      </header>
       <section>
-        <div id="title">
-          <h1>Acorncom</h1>
-          <p>My profile in a nutshell</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/acorncom">acorncom</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
-        </div>
-
-        <h1>Howdy and welcome to my GitHub page</h1>
+        <h1>
+<a id="howdy-and-welcome-to-my-github-page" class="anchor" href="#howdy-and-welcome-to-my-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Howdy and welcome to my GitHub page</h1>
 
 <p>There isn't much to see here at the moment, but I'll be slowly adding things as I go.</p>
 
-<h3>About Me</h3>
+<h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h3>
 
 <p>I've been doing web development since 1998 in various capacities and have a keen interest in UX problems in every project I work on.  I realize more and more that UX is something that has to be thought about from the very beginning of a project if it is going to work successfully for the folks we're working for.</p>
 
 <p>I currently primarily use PHP (in a variety of projects - Yii, Magento, Drupal, Wordpress, etc), but have had experience with Objective-C, Python, Perl and more over the years.</p>
 
-<h3>Projects contributing to</h3>
+<h3>
+<a id="projects-contributing-to" class="anchor" href="#projects-contributing-to" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects contributing to</h3>
 
 <p>I've been contributing to the following projects recently:</p>
 
@@ -53,13 +44,18 @@
 <li><a href="https://github.com/yiisoft/yii">Yii</a></li>
 <li>
 <a href="https://github.com/Asgaroth/xupload">XUpload</a> - maintainer</li>
-</ul><h3>Contact Me</h3>
+</ul>
+
+<h3>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h3>
 
 <p>It's easiest to contact me through my <a href="http://www.acorncomputersolutions.com">website</a> at the moment.</p>
       </section>
-
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
