--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Acorncom by acorncom</title>
+    <title>David Baker by acorncom</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Acorncom</h1>
-        <p>My profile in a nutshell</p>
+        <h1>David Baker</h1>
+        <p>acorncom</p>
 
 
         <p class="view"><a href="https://github.com/acorncom">View My GitHub Profile</a></p>
@@ -24,32 +24,26 @@
       </header>
       <section>
         <h1>
-<a id="howdy-and-welcome-to-my-github-page" class="anchor" href="#howdy-and-welcome-to-my-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Howdy and welcome to my GitHub page</h1>
+<a id="howdy" class="anchor" href="#howdy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Howdy!</h1>
 
-<p>There isn't much to see here at the moment, but I'll be slowly adding things as I go.</p>
+<p>I've been doing web development since 1998 and find solving complex workflow problems (with their resulting user experience (UX) issues) to be quite pleasurable.  Working with people, computers and cultures (and preferably a mix of all three) is a joy :-)</p>
 
-<h3>
-<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me</h3>
-
-<p>I've been doing web development since 1998 in various capacities and have a keen interest in UX problems in every project I work on.  I realize more and more that UX is something that has to be thought about from the very beginning of a project if it is going to work successfully for the folks we're working for.</p>
-
-<p>I currently primarily use PHP (in a variety of projects - Yii, Magento, Drupal, Wordpress, etc), but have had experience with Objective-C, Python, Perl and more over the years.</p>
+<p>I have significant experience in the PHP world, but am also actively using Ember.js (a single-page application framework) and Ruby on Rails.  I'm also dabbling in Elixir / Phoenix (and have used Objective-C, Python and Perl in the past).</p>
 
 <h3>
-<a id="projects-contributing-to" class="anchor" href="#projects-contributing-to" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects contributing to</h3>
+<a id="work" class="anchor" href="#work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Work</h3>
 
-<p>I've been contributing to the following projects recently:</p>
+<p>I run a web consultancy (<a href="http://www.acornwebconsultants.com%5D">Acorn Web Consultants</a> serving small to medium businesses.  We're primarily focused on doing custom web application development, but have a wide range of tech skills (due to years of IT work in the past as well).</p>
 
-<ul>
-<li><a href="https://github.com/yiisoft/yii">Yii</a></li>
-<li>
-<a href="https://github.com/Asgaroth/xupload">XUpload</a> - maintainer</li>
-</ul>
+<h3>
+<a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
+
+<p>I'm currently heavily involved with the <a href="http://www.emberjs.com">Ember</a> community, where I'm a member of the <a href="http://www.emberjs.com/team/">learning team</a>.</p>
 
 <h3>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h3>
 
-<p>It's easiest to contact me through my <a href="http://www.acorncomputersolutions.com">website</a> at the moment.</p>
+<p>I'm available on Twitter at <a href="http://twitter.com/acorncom">@acorncom</a> or you can contact me through our <a href="http://www.AcornWebConsultants.com">website</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
