Tweaked a few minor bugs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>
 <a id="work" class="anchor" href="#work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Work</h3>
 
-<p>I run a web consultancy (<a href="http://www.acornwebconsultants.com%5D">Acorn Web Consultants</a> serving small to medium businesses.  We're primarily focused on doing custom web application development, but have a wide range of tech skills (due to years of IT work in the past as well).</p>
+<p>I run a web consultancy (<a href="http://www.acornwebconsultants.com/">Acorn Web Consultants</a>) serving small to medium businesses.  We're primarily focused on doing custom web application development, but have a wide range of tech skills (due to years of IT work in the past as well).</p>
 
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
